# clinical-prioritization-ai

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  README_STARTUP.md  STARTUP_GUIDE.md  app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_windows.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
.streamlit/: config.toml
app/: __init__.py  streamlit_app.py
config/: external_mapping_example.json
data/raw/: sample_diabetic_data.csv
docs/: README_screenshots.md  index.html
models/: best_model.joblib  model_metadata.json  preprocessor.joblib
notebooks/: 08_temporal_modeling.ipynb  09_external_validation.ipynb  10_calibration_and_fairness.ipynb  11_costs_and_workflow.ipynb
outputs/: generate_explainability_figure.py  generate_figures_and_tables.py  generate_social_preview.py  show_preprocessor_features.py
outputs/tables/: README.txt  best_threshold.csv  brier_score.txt  calibration_table.csv  evaluation_metrics.csv  external_scored.csv  external_validation_metrics.csv  fairness_age.csv  fairness_gender.csv  fairness_race.csv  (+3 more)
paper/: manuscript_draft.md
src/: calibration.py  cost_sensitive.py  evaluate.py  external_validate.py  fairness.py  preprocess.py  schemas.py  temporal_features.py  train.py  workflow_simulation.py
tests/: test_evaluation_outputs.py  test_pipeline_smoke.py  test_streamlit_app_smoke.py  test_workflow_simulation.py
