[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-care-prioritization-engine"
version = "1.0.2"
description = "Machine learning engine for patient prioritization and readmission risk."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "AI Care Prioritization Engine Team" } ]
requires-python = ">=3.9"
keywords = ["healthcare", "readmission", "care prioritization", "machine learning", "triage"]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "streamlit",
    "catboost",
    "xgboost",
    "matplotlib",
    "seaborn",
    "joblib",
    "requests"
]

[project.urls]
Source = "https://github.com/admossie/clinical-prioritization-ai"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 88
target-version = ["py39"]
